--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
   <script src="js/backend.js"></script>
   <script src="js/page.js"></script>
   <script src="js/pin.js"></script>
+  <script src="js/main-pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
 </body>
