--- a/index.html
+++ b/index.html
@@ -255,5 +255,6 @@
   <script src="js/main-pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
